--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2020-4-17)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-1-26)</b></li>
 
         <div class="app-image">
-            <img src="https://cjzwj.gitee.io/zidctg/1.jpg">
-            <img src="https://cjzwj.gitee.io/zidctg/2.jpg">
-            <img src="https://cjzwj.gitee.io/zidctg/3.jpg">
-            <img src="https://cjzwj.gitee.io/zidctg/4.jpg">
+            <img src="https://cjzwj.gitee.io/zidctg/1.png">
+            <img src="https://cjzwj.gitee.io/zidctg/2.png">
+            <img src="https://cjzwj.gitee.io/zidctg/3.png">
+            <img src="https://cjzwj.gitee.io/zidctg/4.png">
         </div>
 
         <div class="app-about">
