--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>白洁动漫 - 专注简洁UI播放体验的动漫APP</title>
-<title>内测5.11内测</title>
-<title>《5.11》</title>
 <meta name="theme-color" content="#BDBDBD">
 <link rel="shortcut icon" href="https://cjzwj.gitee.io/zidctg/应用托管裤/小赵/png/小赵0.jpg">
 <a href="http://dm.cjzwjys.top" title="白洁动漫 - 专注简洁UI播放体验的动漫APP"> <img src="https://cjzwj.gitee.io/zidctg/IMG_20210125_225655.png" alt="白洁动漫 - 专注简洁UI播放体验的动漫APP" />
+<meta name="keywords" content="白洁动漫 ,bjdm,简洁动漫,dm.cjzwjys.top,白洁动漫app"/>
+<meta name="description" content="白洁动漫App拥有全网最全在线动漫免费观看,白洁动漫App含有多种动漫网站资源的采集,白洁动漫只为更好！,欢迎各位老二次元(狗头)" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script>(function () {
