--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <meta name="theme-color" content="#BDBDBD">
 <link rel="shortcut icon" href="https://cjzwj.gitee.io/zidctg/应用托管裤/小赵/png/小赵0.jpg">
 <a href="http://dm.cjzwjys.top" title="白洁动漫 - 专注简洁UI播放体验的动漫APP"> <img src="https://cjzwj.gitee.io/zidctg/IMG_20210125_225655.png" alt="白洁动漫 - 专注简洁UI播放体验的动漫APP" />
-<meta name="keywords" content="白洁动漫 ,bjdm,简洁动漫, 樱花动漫,Sakura,Y站,白洁动漫"/>
-<meta name="description" content="白洁动漫App拥有全网最全在线动漫免费观看,白洁动漫App含有多种动漫网站资源的采集,白洁动漫只为更好！给给我白嫖怪带来良好的观漫体验,欢迎各位老二次元(狗头) 专注动漫的门户网站(APP)" />
+
+<meta name="keywords" content="白洁动漫 ,bjdm,斗罗大陆樱花动漫, 樱花动漫,Sakura,Y站,白洁动漫,jojo的奇妙冒险第一部, 圣痕炼金士第二季, 魔物娘的相伴日常无修,刀剑神域第三季,"/>
+<meta name="description" content="白洁动漫App拥有全网最全在线动漫免费观看,白洁动漫App含有多种动漫网站资源的采集,白洁动漫只为更好！给给我白嫖怪带来良好的观漫体验,欢迎各位老二次元(狗头) 专注动漫的门户网站(APP), jojo的奇妙冒险第一部, 圣痕炼金士第二季, 魔物娘的相伴日常无修,刀剑神域第三季" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script>(function () {
