--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-1-26)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-2-1)</b></li>
 
         <div class="app-image">
    
@@ -94,23 +94,30 @@
 
         <div class="app-about">
             <div class="desc-part" id="shortDesc"><br><br>
--正式版来了<br>
--修复之前版本的代码不统一性<br>
--重置搜索按钮<br>
--全新的界面UI<br>
--全新的列表样式，包含搜索列表首页列表选集<br>
--简陋官网搭建完成(静态)<br>
--全新的播放模式，用户可以自由选择播放模式<br>
--提供模糊补偿-主要修复部分机型显示的问题<br>
--内部新增第二搜索源，暂未开放<br>
--修复搜索完成，进入视频详细界面，第三资源无<br>
--优化APP图标<br>
--注意，浏览器播放模式，第三资源暂不支持！<br>
--部分视频源进行了加密，所以提供了第三资源<br>
--目前功能已经完善(搜索.历史记录@暂不支持定位到分钟.播放定位)  
-待添加:追番功能和删除历史记录以及留言所有历史记录.系统公告，定位在APP系统设置中，不影响用户使用！<br>
--最后感谢大家的使用，也感谢内部测试人员！<br>
-2021新年快乐！<br>
+                
+
+-再次优化模糊补偿～~～<br>
+
+-首页新增每天更新，以及UI交互动画<br>
+
+-修复影视详细图片显示异常<br>
+
+-新增bug反馈，在设置中<br>
+
+-修复内置播放器导致应用闪退问题<br>
+
+-内置播放器新增播放状态显示，播放定位弹窗重新定制<br>
+
+-注浏览器播放不支持历史记录<br>
+
+-优化视觉体验，使用体验<br>
+
+-新增广告在首页右上角<br>
+
+-每日更新可智能定位日期对应显示的新番<br>
+
+-新增的bug反馈会在广告里面展现<br>
+-修复历史记录无图片显示<br>
 
 </ol><br>
                 <span id="expand" style="display:none">展开<i></i></span></div>
