--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
         <div class="app-about">
             <div class="desc-part" id="shortDesc"><br><br>
-                
+<center> https://wwa.lanzous.com/b04n5j3yj <br>
+密码:6666 <br> <br>  </center>       
 
 -再次优化模糊补偿～~～<br>
 
