--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="btn">
 <!--<a id="directDownloadBtn" onclick="directDownload()" href="javascript:void(0);" data-sid="7953" class="app-item dbtn js-downloadBtn btn-download-zhushou wx-down" >直接快速下载</a>-->
             <br/>
-            <a href="https://wwa.lanzous.com/iPr0Rkz314d" data-sid="7953" class="app-item dbtn js-downloadBtn btn-download-zhushou wx-down" >Android下载</a>
+            <a href="https://wwa.lanzous.com/b04n5j3yj" data-sid="7953" class="app-item dbtn js-downloadBtn btn-download-zhushou wx-down" >Android(密码:6666)</a>
         </div>
     </section>
     <section class="app-des">
