--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <br><b><center><p style="font-size:100%">www.cjzwj.top - 提供技术支持<p/><p style="font-size:100%">Copyright ©2019-2021 www.cjzwj.top All Rights Reserved<p style="font-size:30%"><a href="https://cjzwj.gitee.io/zidctg/yhxy.html" target="_blank" ></a>   <a href="https://cjzwj.gitee.io/zidctg/mzsm.html" target="_blank"></a>  <a href="https://cjzwj.gitee.io/zidctg" target="_blank"></a> <a href="###https://mp.weixin.qq.com/s/zo9CMlJzwa3hm7O9FNwNaw" target="_blank" ></a>  <a href="https://jq.qq.com/?_wv=1027&k=5EFteu8" target="_blank" ></a>     
 
 
-<br> <p style="font-size:100%"> <a href="https://www.llshoulu.cn/zxzdsl/3852.html" target="_blank">老李收录网</a>  &nbsp; <a href="https://www.laolibab.cn" target="_blank">站长聚集地</a>    <p/>
+<br> <p style="font-size:100%"> <a href="https://www.llshoulu.cn" target="_blank">老李收录网</a>  &nbsp; <a href="https://www.laolibab.cn" target="_blank">站长聚集地</a>    <p/>
 
 
 
