--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
 
           </p>    <p/></center></b></div><br>
 
+
+<center>   <p style="font-size:65%"> <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278601974'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278601974%26online%3D2' type='text/javascript'%3E%3C/script%3E"));</script>      </a>  </cebter>
+
 <script src="https://cjzwj.gitee.io/zidctg/sweetalert.min.js"></script>
 
 <script>
