--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-2-1)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-2-7)</b></li>
 
         <div class="app-image">
    
@@ -96,7 +96,10 @@
             <div class="desc-part" id="shortDesc"><br><br>
 <center> https://wwa.lanzous.com/b04n5j3yj <br>
 密码:6666 <br> <br>  </center>       
+-1.5更新:-这次更新无太大变换
 
+-修复无法执行远程代码问题仅首页，为新年做准备！<br>
+                
 -再次优化模糊补偿～~～<br>
 
 -首页新增每天更新，以及UI交互动画<br>
