--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-2-7)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-2-21)</b></li>
 
         <div class="app-image">
    
@@ -96,32 +96,10 @@
             <div class="desc-part" id="shortDesc"><br><br>
 <center> https://wwa.lanzous.com/b04n5j3yj <br>
 密码:6666 <br> <br>  </center>       
--1.5更新:-这次更新无太大变换
-
--修复无法执行远程代码问题仅首页，为新年做准备！<br>
-                
--再次优化模糊补偿～~～<br>
-
--首页新增每天更新，以及UI交互动画<br>
-
--修复影视详细图片显示异常<br>
-
--新增bug反馈，在设置中<br>
-
--修复内置播放器导致应用闪退问题<br>
-
--内置播放器新增播放状态显示，播放定位弹窗重新定制<br>
-
--注浏览器播放不支持历史记录<br>
-
--优化视觉体验，使用体验<br>
-
--新增广告在首页右上角<br>
-
--每日更新可智能定位日期对应显示的新番<br>
-
--新增的bug反馈会在广告里面展现<br>
--修复历史记录无图片显示<br>
+-1.5更新: <br> -优化过度动画<br>
+-新增追番在首页浮窗按钮<br>
+-重置模糊补偿设置窗口<br>
+-设置选择浏览器播放将不再跳转系统浏览器增强播放体验 <br>
 
 </ol><br>
                 <span id="expand" style="display:none">展开<i></i></span></div>
