--- a/index.html
+++ b/index.html
@@ -101,19 +101,9 @@
 
 全新版本2.0<br>
 最低安卓系统要求安卓5.0<br>
-1.6版本为铺垫，2.0版本乃是革命性更新<br>
-1.首页去除每日推荐<br>
-2.优化首页 悬浮追番按钮，以及追番界面ui、界面的整洁性<br>
-3.新增用户系统，简单的登录和注册，用于追番、评论<br>
-用户系统不会索要用户的资料，请大家放心！<br>
-4.设置界面重置，全新的ui，全新的设置弹窗，新增模糊补偿设置窗口提示文本<br>
-重置播放器选择窗口，新增开源项。<br>
-5.视频详细界面，优化返回按钮，新增分享、底部相关推荐布局缩小，新增评论区<br>
-6.浏览器播放采用腾讯X5内核<br>
-7.首页动画改善<br>
-8.优化资源过滤展现更多资源<br>
-优化视频详细界面背景颜色，介绍布局新增图片模糊。<br>
-还有关于取消追番的功能，目前不好办，找不到合适的方法，但是我觉得追番很少有取消的吧(滑稽)<br><br>
+修复部分视频无法播放问题<br>
+优化布局，部分动画<br>
+新增历史记录提示<br> <br>
 
 
 </ol><br>
