--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-2-27)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-3-28)</b></li>
 
         <div class="app-image">
    
@@ -99,11 +99,17 @@
 -注意；2.0之前的版本追番功能为本地储存，新版的追番功能是账号形式运控<br>
 以至于，原本追的番剧将会自动取消，还请用户自行备份你自己的追番！<br><br>
 
-全新版本2.0<br>
-最低安卓系统要求安卓5.0<br>
-修复部分视频无法播放问题<br>
-优化布局，部分动画<br>
-新增历史记录提示<br> <br>
+
+1.追番按钮优化<br>
+2.选择响应的追番会提供一个第二资源地址<br>
+3.首页顶部图片优化，增加模糊过度<br>
+4.搜索逻辑优化，搜索打开关闭动画重置<br>
+5.首页加载优化，提示弹窗优化<br>
+6.第二资源重置为独立模块，可在搜索，追番点击跳转独立搜索第二资源，防止无资源<br>
+7.修复首页可能出现无法点击跳转问题，以及部分列表图片闪烁问题<br>
+8.内置浏览器播放右上角提供跳转第三方浏览器按钮<br>
+9.视频详细界面背景优化，布局优化，加强界面美观度<br>
+以上就是本次更新较大的改动！<br>
 
 
 </ol><br>
