--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-3-28)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-4-4)</b></li>
 
         <div class="app-image">
    
@@ -100,16 +100,17 @@
 以至于，原本追的番剧将会自动取消，还请用户自行备份你自己的追番！<br><br>
 
 
-1.追番按钮优化<br>
-2.选择响应的追番会提供一个第二资源地址<br>
-3.首页顶部图片优化，增加模糊过度<br>
-4.搜索逻辑优化，搜索打开关闭动画重置<br>
-5.首页加载优化，提示弹窗优化<br>
-6.第二资源重置为独立模块，可在搜索，追番点击跳转独立搜索第二资源，防止无资源<br>
-7.修复首页可能出现无法点击跳转问题，以及部分列表图片闪烁问题<br>
-8.内置浏览器播放右上角提供跳转第三方浏览器按钮<br>
-9.视频详细界面背景优化，布局优化，加强界面美观度<br>
-以上就是本次更新较大的改动！<br>
+<br>1.修复(影视详细)平凡闪退现象！
+2.优化(影视详细)视觉效果，同时去除无用功能。<br>
+3.修复(第二资源)有资源却无法加载问题。<br>
+4.(暂时)去除搜索第三资源，加强编码速度。<br>
+5.首页加载形式改变，用户可在加载过程中正常操作。<br>
+6.统一(影视详细)的选集按钮。<br>
+7.修复第一资源，选择(自制播放器)点击无响应。<br>
+对此2.5版本之前，选择了服务器强制选择(浏览器)播放。<br>
+2.5版本之后服务器将取消强制设置。
+<br><br>
+有问题请在 (设置)——(反馈)中反馈。<br>
 
 
 </ol><br>
