--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-4-4)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-6.5)</b></li>
 
         <div class="app-image">
    
@@ -100,15 +100,21 @@
 以至于，原本追的番剧将会自动取消，还请用户自行备份你自己的追番！<br><br>
 
 
-<br>1.修复(影视详细)平凡闪退现象！
-2.优化(影视详细)视觉效果，同时去除无用功能。<br>
-3.修复(第二资源)有资源却无法加载问题。<br>
-4.(暂时)去除搜索第三资源，加强编码速度。<br>
-5.首页加载形式改变，用户可在加载过程中正常操作。<br>
-6.统一(影视详细)的选集按钮。<br>
-7.修复第一资源，选择(自制播放器)点击无响应。<br>
-对此2.5版本之前，选择了服务器强制选择(浏览器)播放。<br>
-2.5版本之后服务器将取消强制设置。
+<br> 全新64未框架--权新版本，简化界面UI去除过多没用功能<br>
+1.修复无法正常使用问题，优化首页加载减少闪退问题！<br>
+1.5.全新设计的动画框架<br>
+2.泉新的视频详细界面，焕然一新，看视频就看视频，不搞那么多花里胡哨的东西。<br>
+2.5全新的加载弹窗界面<br>
+3.基本上实行UI设计统一性。<br>
+4.增加播放器缓存时间，避免部分视频加载缓慢导致的时间轴错误。<br>
+5.优化搜索逻辑，修复搜索不展示问题。<br>
+6.由于搜索资源已修复，(搜索额外资源加回)<br><br>
+
+已知问题:<br>
+1.追番还存在问题，暂未修复<br>
+2.搜索按钮动画展关闭再展开会显示列表内容<br>
+3.详细界面追番和继续播放也存在问题。<br>
+感谢大家的支持！<br>
 <br><br>
 有问题请在 (设置)——(反馈)中反馈。<br>
 
