--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="app-downloads"><span>欢迎欢迎</span>·<span>老二次元了吖</span></div>
         <div class="btn">
-<!--<a id="directDownloadBtn" onclick="directDownload()" href="javascript:void(0);" data-sid="7953" class="app-item dbtn js-downloadBtn btn-download-zhushou wx-down" >直接快速下载</a>-->
+<a id="directDownloadBtn" onclick="directDownload()" href="https://github.com/ZIDC/com.cjzwjdm" data-sid="7953" class="app-item dbtn js-downloadBtn btn-download-zhushou wx-down" >开源地址</a>
             <br/>
             <a href="https://wwa.lanzoui.com/b04n5j3yj" data-sid="7953" class="app-item dbtn js-downloadBtn btn-download-zhushou wx-down" >Android(密码:6666)</a>
         </div>
