--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-6.5)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-7.11)</b></li>
 
         <div class="app-image">
    
@@ -100,21 +100,19 @@
 以至于，原本追的番剧将会自动取消，还请用户自行备份你自己的追番！<br><br>
 
 
-<br> 全新64未框架--权新版本，简化界面UI去除过多没用功能<br>
-1.修复无法正常使用问题，优化首页加载减少闪退问题！<br>
-1.5.全新设计的动画框架<br>
-2.泉新的视频详细界面，焕然一新，看视频就看视频，不搞那么多花里胡哨的东西。<br>
-2.5全新的加载弹窗界面<br>
-3.基本上实行UI设计统一性。<br>
-4.增加播放器缓存时间，避免部分视频加载缓慢导致的时间轴错误。<br>
-5.优化搜索逻辑，修复搜索不展示问题。<br>
-6.由于搜索资源已修复，(搜索额外资源加回)<br><br>
-
-已知问题:<br>
-1.追番还存在问题，暂未修复<br>
-2.搜索按钮动画展关闭再展开会显示列表内容<br>
-3.详细界面追番和继续播放也存在问题。<br>
-感谢大家的支持！<br>
+～啊啊啊 上个版本bug也太多了吧<br>
+1.修复点击列表跳转状态栏颜色不正常<br>
+2.修复点击追番进入详细界面列表直接null<br>
+3.新增列表点击提示弹窗，内容更加明显<br>
+4.修复迟迟未修复的首页公告<br>
+5.新增每次进入软件都会显示"免责声明"<br>
+6.去除启动界面动画，改为软件顶部文字动效<br>
+7.优化更新弹窗<br>
+8.优化公告弹窗<br>
+8.5.为了流畅的动画，新的提示弹窗和公告弹窗未加入动画<br>
+9.加载提示UI修改<br>
+10.有问题，请直接发送邮件给我，邮箱在公告里面。<br>
+#<br>
 <br><br>
 有问题请在 (设置)——(反馈)中反馈。<br>
 
