--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-7.11)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-7.16)</b></li>
 
         <div class="app-image">
    
@@ -100,18 +100,12 @@
 以至于，原本追的番剧将会自动取消，还请用户自行备份你自己的追番！<br><br>
 
 
-～啊啊啊 上个版本bug也太多了吧<br>
-1.修复点击列表跳转状态栏颜色不正常<br>
-2.修复点击追番进入详细界面列表直接null<br>
-3.新增列表点击提示弹窗，内容更加明显<br>
-4.修复迟迟未修复的首页公告<br>
-5.新增每次进入软件都会显示"免责声明"<br>
-6.去除启动界面动画，改为软件顶部文字动效<br>
-7.优化更新弹窗<br>
-8.优化公告弹窗<br>
-8.5.为了流畅的动画，新的提示弹窗和公告弹窗未加入动画<br>
-9.加载提示UI修改<br>
-10.有问题，请直接发送邮件给我，邮箱在公告里面。<br>
+～嗯<br>
+1.修复上个版本进入软件闪退问题<br>
+2.修复进入详细界面100%闪退问题<br>
+3.设置新增减弱动画效果<br>
+4.新增手动更新资源，在首页最左端显示<br>
+5.手动更新资源需要自行发送邮箱联系开发者<br>
 #<br>
 <br><br>
 有问题请在 (设置)——(反馈)中反馈。<br>
