--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-7.16)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-8.1)</b></li>
 
         <div class="app-image">
    
@@ -100,12 +100,15 @@
 以至于，原本追的番剧将会自动取消，还请用户自行备份你自己的追番！<br><br>
 
 
-～嗯<br>
-1.修复上个版本进入软件闪退问题<br>
-2.修复进入详细界面100%闪退问题<br>
-3.设置新增减弱动画效果<br>
-4.新增手动更新资源，在首页最左端显示<br>
-5.手动更新资源需要自行发送邮箱联系开发者<br>
+～好久不见<br>
+1.修复视频详细界面无法获取级数<br>
+2.优化搜索动画提高帧率<br>
+3.新增过滤词库<br>
+4.优化手动更新界面UI<br>
+5.设置新增播放模式选择<br>
+新增播放模式选择<br>
+6.优化首页加载速度<br>
+7.手动更新视频默认直接浏览器打开<br>
 #<br>
 <br><br>
 有问题请在 (设置)——(反馈)中反馈。<br>
