--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     <section class="app-des">
-        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-8.1)</b></li>
+        <div class="title">应用介绍</div><aside><li>更新日志<b>(最后更新2021-8.10)</b></li>
 
         <div class="app-image">
    
@@ -101,14 +101,10 @@
 
 
 ～好久不见<br>
-1.修复视频详细界面无法获取级数<br>
-2.优化搜索动画提高帧率<br>
-3.新增过滤词库<br>
-4.优化手动更新界面UI<br>
-5.设置新增播放模式选择<br>
-新增播放模式选择<br>
-6.优化首页加载速度<br>
-7.手动更新视频默认直接浏览器打开<br>
+1.去除手动更新，新增每日更新100<br>
+2.优化加载策略，将公告和更新检测同时进行，加快加载速度<br>
+3.修改公告弹窗，搜索新增视频推荐，用户可以推荐自己喜欢的视频<br>
+4.修复视频选集按钮太小，优化弹窗显示<br>
 #<br>
 <br><br>
 有问题请在 (设置)——(反馈)中反馈。<br>
