--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 
 
 ～好久不见<br>
+新增过滤规则:$flv、'<br>
+已添加规则:qiyi&、youku&、sohu&、m3u8&、vip&、$bdhd、szw&、flv&'、flv&<br>
 1.去除手动更新，新增每日更新100<br>
 2.优化加载策略，将公告和更新检测同时进行，加快加载速度<br>
 3.修改公告弹窗，搜索新增视频推荐，用户可以推荐自己喜欢的视频<br>
