--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="theme-color" content="#BDBDBD">
 <link rel="shortcut icon" href="./png/小赵0.jpg">
 
-
+跳转新界面-Wd小赵个人博客
 <span id="totalSecond">3</span>
 <script language="javascript" type="text/javascript"> 
 var second = document.getElementById('totalSecond').textContent; 
