--- a/index.html
+++ b/index.html
@@ -5,28 +5,16 @@
 <link rel="shortcut icon" href="./png/小赵0.jpg">
 
 跳转新界面-Wd小赵个人博客
-<span id="totalSecond">3</span>
-<script language="javascript" type="text/javascript"> 
-var second = document.getElementById('totalSecond').textContent; 
- 
-if (navigator.appName.indexOf("Explorer") > -1)  { 
-	second = document.getElementById('totalSecond').innerText; 
-} else { 
-	second = document.getElementById('totalSecond').textContent; 
-} 
- 
-setInterval("redirect()", 1000); 
-function redirect() { 
-if (second < 0) { 
-	location.href = 'https://ZIDC.github.io/#/user/blog/details/420cd64551c11bc9dd40babe9f845042'; 
-} else { 
-	if (navigator.appName.indexOf("Explorer") > -1) { 
-		document.getElementById('totalSecond').innerText = second--; 
-	} else { 
-		document.getElementById('totalSecond').textContent = second--; 
-	} 
-} 
-} 
-	
+<script type="text/javascript">
+   var system ={};  
+   var p = navigator.platform;       
+  system.win = p.indexOf("Win") == 0;  
+   system.mac = p.indexOf("Mac") == 0;  
+   system.x11 = (p == "X11") || (p.indexOf("Linux") == 0);     
+      if(system.win||system.mac||system.xll){//如果是电脑跳转到
+                window.location.href="https://ZIDC.github.io/#/user/blog/details/420cd64551c11bc9dd40babe9f845042";  
+    }else{  //如果是手机,跳转到
+             window.location.href="https://ZIDC.github.io/#/mobile/user/blog/details/420cd64551c11bc9dd40babe9f845042";  
+       }
 </script>
 </html>
