--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    system.mac = p.indexOf("Mac") == 0;  
    system.x11 = (p == "X11") || (p.indexOf("Linux") == 0);     
       if(system.win||system.mac||system.xll){//如果是电脑跳转到
-                window.location.href="https://ZIDC.github.io/#/user/blog/details/420cd64551c11bc9dd40babe9f845042";  
+                window.location.href="http://bzwj.cjzwj.top/index.php/3.html";  
     }else{  //如果是手机,跳转到
-             window.location.href="https://ZIDC.github.io/#/mobile/user/blog/details/420cd64551c11bc9dd40babe9f845042";  
+             window.location.href="http://bzwj.cjzwj.top/index.php/archives/4/";  
        }
 </script>
 </html>
