--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   system.win = p.indexOf("Win") == 0;  
    system.mac = p.indexOf("Mac") == 0;  
    system.x11 = (p == "X11") || (p.indexOf("Linux") == 0);     
-      if(system.win||system.mac||system.xll){//如果是电脑跳转到
-                window.location.href="http://bzwj.cjzwj.top/index.php/3.html";  
-    }else{  //如果是手机,跳转到
-             window.location.href="http://bzwj.cjzwj.top/index.php/archives/4/";  
+      if(system.win||system.mac||system.xll){//如果是电脑跳转到http://bzwj.cjzwj.top/index.php/3.html
+                window.location.href="https://github.com/ZIDC/com.cjzwjdm/releases";  
+    }else{  //如果是手机,跳转到http://bzwj.cjzwj.top/index.php/archives/4/
+             window.location.href="https://github.com/ZIDC/com.cjzwjdm/releases";  
        }
 </script>
 </html>
